force-app/main/default/objects/Reviewer_Progress__c/Reviewer_Progress__c.object-meta.xml
<CustomObject>
    <description>Tracks reviewer gamification progress.</description>
    <label>Reviewer Progress</label>
    <pluralLabel>Reviewer Progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>