force-app/main/default/objects/Reviewer_Progress__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Current reviewer level.</description>
    <label>Level</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>