force-app/main/default/objects/Reviewer_Progress__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>Total points earned.</description>
    <label>Points</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>