force-app/main/default/objects/Reviewer_Progress__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Reviewer user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewer Progress Records</relationshipLabel>
    <relationshipName>Reviewer_Progress_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>